--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top">
   <div class="container">
     <a class="navbar-brand" href={% url 'indexes:home' %}>
           <img src={% static "img/kslogo.png" %} class="logo" alt="" />
